# int3

./: .gitignore  .readthedocs.yaml  AGENTS.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  dev-requirements.txt  mypy.ini  pyproject.toml  pytest.ini  setup.py
docs/: acknowledgements.rst  conf.py  coverage.rst  development.rst  index.rst  prior_art.rst  release_notes.rst  user_guide.rst
docs/api/: architecture.rst  assembly.rst  codegen.rst  compilation.rst  errors.rst  execution.rst  factor.rst  format.rst  instructions.rst  platform.rst
donatello/: __init__.py  __main__.py  cli.py  constants_x86_32.py  encode.py  errors.py  factor_32.py  io.py  utils.py
donatello/encode/: factor_32.py
donatello/meta/: __init__.py  _version.py  cli.py  errors.py
donatello/models/: asm_context.py  gadget.py
donatello/utils/: chars.py
examples/: windows_message_box.py
examples/linux/: hello_world.py  list_files.py  reverse_shell.py
int3/: __init__.py  __main__.py  _utils.py  architecture.py  architectures.py  builder.py  constants.py  context.py  errors.py  factor.py  format.py  gadget.py  immediates.py  labels.py  platform.py  platforms.py  register.py  registers.py  strategy.py  syscalls.py  triple.py  version.py
int3/_interfaces/: __init__.py  printable_ir.py
int3/_vendored/: llvmlite.py
int3/architecture/: __init__.py  architecture.py  endian.py  instruction_width.py  registers.py
int3/architectures/: __init__.py  architecture.py  architecture_meta.py  instruction_width.py  registers.py
int3/assembly/: __init__.py  assemble.py  disassemble.py
int3/codegen/: __init__.py  choice.py  code_generator.py  code_segment.py  compiled_segment.py  gadget.py  implication.py  instruction.py  mutation_engine.py  segment.py  side_effect.py  strategy.py
int3/codegen/passes/: __init__.py  abc.py  add_syscall_operand_instruction_pass.py  factor_immediate_instruction_pass.py  instruction_passes.py  instructon_passes.py  move_small_immediate_instruction_pass.py  pure_register_instruction_pass.py
int3/compilation/: __init__.py  _compiler_factory_mixin.py  _linux_compiler.py  _linux_syscall_interface_mixin.py  block.py  call_proxy.py  compiler.py  compiler_scope.py  flattener.py  function.py  function_proxy.py  high_level_compiler.py  linux_compiler.py  scope.py  symtab.py  types.py
int3/compilation/linux/: __init__.py  _linux_high_level_interface_mixin.py  _linux_syscall_interface_mixin.py  linux_compiler.py  linux_syscall_mixin.py
int3/context/: emit_context.py
int3/emission/: __init__.py  _intel_emitter_mixin.py  architecture_emitter.py  emission.py  emission_set.py  emitter.py  linux_emitter.py  mips_emitter.py  semantic_emitter.py  stack_scope.py  windows_emitter.py  x86_64_emitter.py  x86_64emitter.py  x86_emitter.py
int3/emission/architectures/: __init__.py  _intel_emitter_mixin.py  architecture_emitter.py  mips_emitter.py
int3/emission/linux/: __init__.py  linux_emitter.py
int3/emission/windows/: __init__.py  windows_emitter.py
int3/execution/: __init__.py  _linux.py  _windows.py  execute.py
int3/factor/: __init__.py  compute_factor.py  constraints.py  context.py  factor_clause.py  factor_constraint.py  factor_context.py  factor_operation.py  factor_result.py
int3/format/: __init__.py  format_style.py  formatter.py
int3/gadgets/: __init__.py  gadget.py  multi_gadget.py
int3/instructions/: __init__.py  instruction.py
int3/ir/: __init__.py  block.py  branch.py  constant.py  function.py  jump.py  label.py  operation.py  predicate.py  struct.py  types.py  variable.py
int3/ir/blocks/: __init__.py  ir_basic_block.py  ir_function.py  ir_module.py
int3/ir/hlir/: __init__.py  hlir_branch.py  hlir_label.py  hlir_operation.py  hlir_variable.py
int3/ir/llir/: __init__.py  llir_constant.py  llir_label.py  llir_operation.py  llir_types.py  llir_virtual_register.py
int3/ir/operations/: __init__.py  ir_abstract_operation.py  ir_concrete_operation.py  ir_operation.py
int3/ir/types/: __init__.py  ir_bytes_type.py  ir_int_type.py  ir_type.py
int3/ir/variables/: __init__.py  ir_bytes_constant.py  ir_global_var.py  ir_int_constant.py  ir_local_var.py  ir_named_var.py  ir_var.py
int3/meta/: __init__.py  fs.py
int3/mutation/: __init__.py  mutation_engine.py
int3/mutation/passes/: __init__.py  aarch64_movk_instruction_pass.py  abc.py  add_syscall_operand_instruction_pass.py  factor_immediate_instruction_pass.py  factor_immediate_via_transitory_register_instruction_pass.py  factor_inplace_immediate_instruction_pass.py  load_upper_immediate_instruction_pass.py  memory_offset_instruction_pass.py  mips_return_instruction_pass.py  move_small_immediate_instruction_pass.py  nop_rewriter_instruction_pass.py  pure_register_move_instruction_pass.py  pure_register_source_substitution_instruction_pass.py
int3/networking/: __init__.py  protocols.py  structs.py
int3/payloads/: __init__.py  linux_reverse_shell.py  message_box_payload.py  payload.py
int3/platform/: __init__.py  platform.py  syscall_convention.py  triple.py
int3/syscalls/: __init__.py  linux_syscall_numbers.py
patches/: llvmlite_0.44.0_enable_all_asm_parsers.patch
scripts/: format.sh  install_custom_llvmlite.sh  install_musl_cc_toolchains.sh  lint.sh  llvm_config_wrapper.sh  make_docs.py  shellcode_runner.c  test.sh  test_with_info_logging.sh
tests/: conftest.py  qemu.py  test_architecture.py  test_choice.py  test_codegen.py  test_compilation.py  test_compiler_scopes.py  test_control_flow.py  test_factor.py  test_function_definitons.py  test_instructions.py  test_ir_constants.py  test_linux_emitter.py  test_linux_syscalls.py  test_program_structure.py  test_registers.py  test_segment.py  test_semantic_emitter.py  test_triple.py  test_type_coercion.py  utils.py
(+16 files in other folders)
