[tool.poetry]
name = "int3"
version = "0.0.2"
description = "Tools and libraries for the aspiring shellcoder."
authors = ["welchbj <12776611+welchbj@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
keystone-engine = "^0.9.2"
z3-solver = "^4.12.2.0"
click = "^8.1.3"
capstone = {version = "^4.0.2", platform = "linux"}
capstone-windows = {version = "^3.0.4", platform = "windows"}
unicorn = "^2.0.1.post1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
mypy = "^1.3.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
