[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "int3"
version = "0.0.2"
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities"
]
authors = [
  {name = "Brian Welch", email = "12776611+welchbj@users.noreply.github.com"},
]
maintainers = [
  {name = "Brian Welch", email = "12776611+welchbj@users.noreply.github.com"}
]
description = "Compiler for position-independent assembly programs"
keywords = ["assembly", "llvm", "compiler"]
dependencies = [
    "capstone>=5.0.6",
    "click>=8.2.1",
    "keystone-engine>=0.9.2",
    "z3-solver>=4.15.0.0",
]

[project.urls]
Homepage = "https://github.com/welchbj/int3"
Documentation = "https://int3.readthedocs.io"
Repository = "https://github.com/welchbj/int3"
"Bug Tracker" = "https://github.com/welchbj/int3/issues"

[project.scripts]
tt = "int3.__main__:cli"

[tool.uv]
package = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "int3/_vendored",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py313"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["int3*"]

[tool.setuptools.package-data]
"int3._vendored.llvmlite.binding" = ["*.so"]
"*" = ["*.so", "*.so.*"]

[tool.wheel]
platlib = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

docstring-code-format = true

[dependency-groups]
dev = [
    "livereload>=2.7.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]
